--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
     defaultConfig {
         applicationId "com.dan.videostab"
-        minSdkVersion 26
+        minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -39,27 +39,16 @@ android {
             }
         }
         release {
-            minifyEnabled true
-            shrinkResources true
+            //minifyEnabled true
+            //shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildFeatures {
         dataBinding true
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    sourceSets {
-        main {
-            jni {
-                srcDirs 'src/main/jni', 'src/main/jniLibs'
-            }
-        }
     }
 }
 
