--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation "androidx.documentfile:documentfile:1.0.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2-native-mt"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation 'com.arthenica:ffmpeg-kit-full:4.5.1-1'
+
 }
